ui/events/test/event_generator.h
@@ -5,7 +5,6 @@
 #ifndef UI_EVENTS_TEST_EVENT_GENERATOR_H_
 #define UI_EVENTS_TEST_EVENT_GENERATOR_H_
 
-#include <list>
 #include <memory>
 #include <vector>
 
@@ -17,10 +16,6 @@
 #include "ui/events/keycodes/keyboard_codes.h"
 #include "ui/gfx/geometry/point.h"
 #include "ui/gfx/native_widget_types.h"
-
-namespace gfx {
-class PointF;
-}
 
 namespace ui {
 class EventSource;
@@ -137,9 +132,6 @@ class EventGenerator {
     current_location_ = location;
   }
   const gfx::Point& current_location() const { return current_location_; }
-
-  void set_async(bool async) { async_ = async; }
-  bool async() const { return async_; }
 
   // Events could be dispatched using different methods. The choice is a
   // tradeoff between test robustness and coverage of OS internals that affect
@@ -411,13 +403,6 @@ class EventGenerator {
                       int steps,
                       int num_fingers);
 
-  // Generates scroll sequences of a FlingCancel, Scrolls, FlingStart, sending
-  // scrolls of each of the values in |offsets|.
-  void ScrollSequence(const gfx::Point& start,
-                      const base::TimeDelta& step_delay,
-                      const std::vector<gfx::PointF>& offsets,
-                      int num_fingers);
-
   // Generate a TrackPad "rest" event. That is, a user resting fingers on the
   // trackpad without moving. This may then be followed by a ScrollSequence(),
   // or a CancelTrackpadRest().
@@ -463,9 +448,6 @@ class EventGenerator {
   gfx::Point GetLocationInCurrentRoot() const;
   gfx::Point CenterOfWindow(const EventTarget* window) const;
 
-  void DispatchNextPendingEvent();
-  void DoDispatchEvent(Event* event, bool async);
-
   std::unique_ptr<EventGeneratorDelegate> delegate_;
   gfx::Point current_location_;
   EventTarget* current_target_ = nullptr;
@@ -473,11 +455,6 @@ class EventGenerator {
   bool grab_ = false;
 
   ui::PointerDetails touch_pointer_details_;
-
-  std::list<std::unique_ptr<Event>> pending_events_;
-
-  // Set to true to cause events to be posted asynchronously.
-  bool async_ = false;
 
   // Whether to skip mapping of coordinates from the root window to a hit window
   // when dispatching events.
